# Image_Cross_Correlation

./: ICC.yml  README.md  pyproject.toml
ICC/: IO_Methods.py  cross_correlation.py  image_manipulators.py  utils.py
ICC/Test_Data/Simulated_FC_DFC_GC/: bipartite_img(RGB).tif  bipartite_img.tif  separated_blob_img(RGB).tif  separated_blob_img.tif  tripartite_3_obj_img(RGB).tif  tripartite_3_obj_img.tif
ICC/Test_Data/Three_color_Celegans_FC_DCF_GC/: blue_in_mask.tif.npy  green_in_mask.tif.npy  red_in_mask.tif.npy
ICC/simulators/: image_simulators.py
USER_GUIDE/: Walkthrough.ipynb
