[project]
name = "ICC"

version = "0.0.1"

description = "Image Cross Correlation for Colocalization developed for the Weber Lab by Baljyot Singh Parmar"

readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE"}

keywords = ["ICC"]

authors = [
  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" }
]

maintainers = [
  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" }
]

dependencies = [
  "numpy>=1.21.2",
  "matplotlib>=3.6.0",
  "scipy>=1.7.1",
  "scikit-image>=0.18.3",
  "Pillow==9.4.0"
]
[tool.setuptools.packages.find]
include = ["ICC*"]
exclude = ["docs*", "tests*"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
